--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "投票系统",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "lyn",
@@ -16,5 +17,8 @@
     "node-schedule": "^2.1.0",
     "node-xlsx": "^0.21.0",
     "string-random": "^0.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
