--- a/package.json
+++ b/package.json
@@ -20,6 +20,26 @@
     "string-random": "^0.1.3"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.29.0",
     "nodemon": "^2.0.20"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {},
+    "parser": "babel-eslint"
+  },
+  "volta": {
+    "node": "16.13.1",
+    "yarn": "1.22.19"
   }
 }
